css/style.css
*{
    box-sizing: border-box;
    margin: 0;
    padding:0;
}

/* Variables */
:root {
  /*  ===========================
          Color Variables Section
      =========================== */
    --heading-primary-color: #274c77;
    --heading-secondary-color: #a3cef1;
    --body-text-color: #274c77;
    --light-grey-background-color: #e7ecef;

  /*  ===========================
          Font-Families Variables Section
      =========================== */
      --heading-primary-fontFamily: "Roboto Mono", sans-serif;
      --heading-secondary-fontFamily: "Roboto Flex", sans-serif;
      --body-text-normal-fontFamily: "Outfit", sans-serif;
      --btn-text-fontFamily: "Inter", sans-serif;

      --heading-fontSize: 2.986rem;
      --secondary-fontSize:2.088rem;
      --body-text-fontSize: 1rem;
      --btn-fontSize:1rem;
       /*  ===========================
          12-Grid system Variables Section
      =========================== */
      --grid-L-cols: 12;
      --grid-L-gap: 0.938rem;
      --grid-L-maxWidth:1100px;

}

       /*  ===========================
          Generic styles sSection
      =========================== */
        h1{
            font-family: var(--heading-primary-fontFamily);
            color: var(--heading-primary-color);
            font-weight: 700;
            text-transform: uppercase;
            letter-spacing: 0.044rem;
            margin-bottom: 1rem;
            font-size: var(--heading-fontSize);
            
        }

        h2{
            font-family: var(--heading-secondary-fontFamily);
            color: var(--heading-secondary-color);
            font-weight:300;
            text-transform: uppercase;
            letter-spacing: 0.7px;
            margin-bottom: 4px;
            font-size: var(--secondary-fontSize);
        }

        h3{
            font-family: var(--heading-primary-fontFamily);
            color: var(--heading-primary-color);
            font-weight: 700;
            text-transform: uppercase;
            letter-spacing: 0.044rem;
            margin-bottom: 1rem;
            font-size: var(--secondary-fontSize);
        }

        h4{
            font-family: var(--heading-secondary-fontFamily);
            color: var(--heading-secondary-color);
            text-transform: uppercase;
            letter-spacing: 0.044rem;
            margin-bottom: 0.25rem;
        }

        p{
            font-family: var(--body-text-normal-fontFamily);
            color: var(--body-text-color);
            font-weight: 400;
            letter-spacing: 0.056rem;
            margin-bottom: 0.25rem;
            font-size: var(--body-text-fontSize);
            line-height: 1.5;
        }
        a{
            font-family: var(--body-text-normal-fontFamily);
            color: var(--body-text-color);
            font-weight: 400;
            letter-spacing: 0.056rem;
            margin-bottom: 0.313rem;
            font-size: 1em; 
            line-height: 1.5;
        }
        
        button, input[type=submit]{
            padding: 0.813rem 1.85rem;
            border-radius: 0.313rem;
            font-family: var(--btn-text-fontFamily);
            font-size: var(--btn-fontSize);
            background-color: var(--heading-primary-color);
            color: #fff;
            border: none;
        }
       
        form{
            box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
            border-radius: 0.313rem;
        }

        /*Nav Bar From scripts section*/
        .navbar{
            display: flex;
            padding: 0;
            width: 100%;
        }
        
        .dropdown-button {
            background-color: #fff !important;
            border-radius: 0.313rem;
            font-family: var(--btn-text-fontFamily);
            font-size: var(--btn-fontSize);
            border: none;
            margin-bottom: 0.313rem;
            margin-right: 1rem;
            margin-top: 1em;
        }
            
        .dropdown-menu {
            background-color: #fff;
            list-style: none;
            padding: 0;
            display: none; 
            right: 1rem;
            margin-top: 10.813rem;
        }
        
        .dropdown-menu.show {
            display: block; 
        }
        .dropdown-menu li{
            margin: 0.313rem 0;
        }
        .dropdown-menu a{
            color: #555;
            text-decoration: none;
            font-size: 1rem;
            display: block;
            padding: 0.625rem;
        }
        .dropdown-menu a:hover{
            background-color: #555;
            color: white;
        }



        .hamburguer-menu{
            margin-left: 1.25rem;
            width: 2.813rem;
            cursor: pointer;
            transition: transform 0.2s ease;
        }
        .hamburguer-menu:hover{
            transform: scale(1.1);
        }
        .logo{
            width: 9rem;
            margin-bottom: 0;
            margin-left: 1rem;
            margin-right: 1.25rem;
        }
        .logo:hover{
            transform: scale(1.1);
        }

        /*Side Bar*/
        .side-bar {
            position: fixed;
            top: 0;
            left: -18.75rem; 
            width: 18.75rem;
            height: 100%;
            background-color: #19416d;
            transition: left 0.3s ease-in-out; 
            display: flex;
            flex-direction: column;
            z-index: 1000;
            
        }
        .side-bar a{
            color: #fff;
            font-size: x-large;
            margin-top: 0.625rem;
            margin-left: 0.625rem;
            text-decoration: none;
            margin-right: 1.25rem;
            width: 60%;
            transition: background-color 0.2s ease;
            font-family: var(--heading-secondary-fontFamily);
        }

       
        
        .side-bar .icon-img {
            width: 1.5rem;
            height: 1.5rem;
            margin-right: 0.625rem; 
        }
        .side-bar a:hover{
            background-color: #555;
            border-radius: 5%;
            padding: 0.313rem;
        }
        .side-bar.show {
            left: 0; 
            box-shadow: 0.125rem 0 0.313rem rgba(0, 0, 0, 5);
        }
        
        .side-bar .close-logo {
            position: absolute; 
            top: 0.625rem;
            right: 0.625rem;
            display: block;
            width: 1.5rem;
            height: 1.5rem;
            cursor: pointer;
            
        }

        .background-overlay{
            position: fixed;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background-color: rgba(0, 0, 0, 0.5); 
            z-index: 999; 
            display: none; 
        }

        .background-overlay.show{
            display: block;
        }
        .dropdown-link:last-child{
            margin-top: 38rem;
        }

        .main-div{
            display: none;
            position: fixed;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background-color: rgba(0, 0, 0, 0.5); 
            justify-content: center;
            align-items: center;
            z-index: 1001;
        }

        .popup-content{
            background-color: #fff;
            padding: 1.25rem;
            border-radius: 0.625rem;
            text-align: center;
            width: 18.75rem;
        }
        .main-div button {
            margin: 0.625rem;
            padding: 0.625rem 1.25rem;
            border: none;
            background-color: #05d17e;  
            color: white;
            cursor: pointer;
            border-radius: 0.313rem;
            font-size: 1rem;
        }
        
        .main-div button#btnCancel {
            background-color: #AF3939;  
        }
        
        .main-div button:hover {
            opacity: 0.8;
        }

        .cta-btn{
            height: 2.5rem;
            text-decoration: none;
            padding: 0.625rem 1.25rem;
            border-radius: 0.313rem;
            display: flex;
            justify-content: center;
            align-items: center;
            outline: none;
            border: none;

        }
       
        .cta-btn-primary{
            border: none;
            color:#fff;
            background-color: var(--body-text-color);
        }
        .cta-btn-secondary{
            background-color: white;
            border: 0.063rem solid var(--heading-primary-color);
            color:var(--heading-primary-color);
        }
        .cta-btn-danger{
            background-color: #C00F0C;
            color:#fff;
            border: none;
        }
        .text-danger{
            color: #C00F0C;
        }
        .grid-12{
            max-width: 80%;
            width: 80%;
            height: auto;
            display: grid;
            grid-template-columns: repeat(12, 1fr);
            grid-template-rows: auto;
            column-gap: var(--grid-L-gap);
            margin: 2rem auto;
            margin-top: 0.2em !important;
        }
        body{ /* added for centering */
            max-width: 100%;
            margin: 0 auto;
        }

        /* input{
            border-color: var(--heading-secondary-color);
            border-style:solid;
        } */
       /*  ===========================
          Header/Navbar sSection
      =========================== */
/**/
#header{
    background-color: var(--light-grey-background-color);
    width: 100%;
    margin:0 auto;
    height: auto;
    border-top: 0.2rem solid  var(--heading-primary-color);
    padding: 0.625rem 1.25rem;
    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
}
#footer{
    width: 100%;
    margin:0 auto;
}

#main-navbar{
display: flex;
align-items: center;
justify-content: flex-start;
overflow: hidden;
}

.page-info{
    display: flex;
    flex-direction: column;
    gap: 1.875rem;
}

/* MAIN HEADER */
#main-navbar a{
    margin: 0;
}
#main-navbar ul{
    display: flex;
    list-style: none;
    align-items: center;
    margin: 0;
    gap: 1.2rem;
    margin-left: auto;
    width: auto;
    justify-content: space-between;
}
#active-nav-item{
    background-color: #fff;
    padding: 0.625rem 1.25rem;
    border-radius: 5px;
    border: 0.063rem solid var(--body-text-color);
}
#main-navbar ul a{
    text-decoration: none;
    font-size: 1.2rem;
    font-family: var(--body-text-normal-fontFamily);
    font-weight: 700;
    text-transform: uppercase;
}
.profile{
    width: 4.375rem;
    height: 4.375rem;
    border-radius: 50%;
    border: 0.063rem solid var(--body-text-color);
    overflow: hidden;
}
#main-navbar img{

    width: 100%;
    height: 100%;
    object-fit: cover;

}

#home-navbar{
    height: 2rem;
    width: 100%;
    background-color: var(--light-grey-background-color);
    text-align: center;
}

